Made some changes

--- a/resume.html
+++ b/resume.html
@@ -116,9 +116,9 @@
                 <div id="circle"></div>
               </div>
             </li>
-            <li>
+			 <li>
               <div class="skill_name">
-                C#
+                Ionic
               </div>
               <div class="skill_progress">
                 <div id="circle" style="background-color: #0bb5f4;"></div>
@@ -130,7 +130,7 @@
             </li>
             <li>
               <div class="skill_name">
-                Ionic
+                C#
               </div>
               <div class="skill_progress">
                 <div id="circle" style="background-color: #0bb5f4;"></div>
@@ -164,30 +164,30 @@
                 <div id="circle"></div>
               </div>
             </li>
-            <li>
-              <div class="skill_name">
-                React
-              </div>
-              <div class="skill_progress">
-                <div id="circle" style="background-color: #0bb5f4;"></div>
-                <div id="circle" style="background-color: #0bb5f4;"></div>
-                <div id="circle"></div>
-                <div id="circle"></div>
-                <div id="circle"></div>
-              </div>
-            </li>
-            <li>
-              <div class="skill_name">
-                JavaScript
-              </div>
-              <div class="skill_progress">
-                <div id="circle" style="background-color: #0bb5f4;"></div>
-                <div id="circle" style="background-color: #0bb5f4;"></div>
-                <div id="circle"></div>
-                <div id="circle"></div>
-                <div id="circle"></div>
-              </div>
-            </li>
+            <!-- <li> -->
+              <!-- <div class="skill_name"> -->
+                <!-- React -->
+              <!-- </div> -->
+              <!-- <div class="skill_progress"> -->
+                <!-- <div id="circle" style="background-color: #0bb5f4;"></div> -->
+                <!-- <div id="circle" style="background-color: #0bb5f4;"></div> -->
+                <!-- <div id="circle"></div> -->
+                <!-- <div id="circle"></div> -->
+                <!-- <div id="circle"></div> -->
+              <!-- </div> -->
+            <!-- </li> -->
+            <!-- <li> -->
+              <!-- <div class="skill_name"> -->
+                <!-- JavaScript -->
+              <!-- </div> -->
+              <!-- <div class="skill_progress"> -->
+                <!-- <div id="circle" style="background-color: #0bb5f4;"></div> -->
+                <!-- <div id="circle" style="background-color: #0bb5f4;"></div> -->
+                <!-- <div id="circle"></div> -->
+                <!-- <div id="circle"></div> -->
+                <!-- <div id="circle"></div> -->
+              <!-- </div> -->
+            <!-- </li> -->
             <li>
               <div class="skill_name">
                 NPM
@@ -212,18 +212,18 @@
                 <div id="circle"></div>
               </div>
             </li>
-            <li>
-              <div class="skill_name">
-                MSSQL
-              </div>
-              <div class="skill_progress">
-                <div id="circle" style="background-color: #0bb5f4;"></div>
-                <div id="circle"></div>
-                <div id="circle"></div>
-                <div id="circle"></div>
-                <div id="circle"></div>
-              </div>
-            </li>
+            <!-- <li> -->
+              <!-- <div class="skill_name"> -->
+                <!-- MSSQL -->
+              <!-- </div> -->
+              <!-- <div class="skill_progress"> -->
+                <!-- <div id="circle" style="background-color: #0bb5f4;"></div> -->
+                <!-- <div id="circle"></div> -->
+                <!-- <div id="circle"></div> -->
+                <!-- <div id="circle"></div> -->
+                <!-- <div id="circle"></div> -->
+              <!-- </div> -->
+            <!-- </li> -->
             <li>
               <div class="skill_name">
                 JSON
@@ -356,7 +356,7 @@
                   product release.
                 </li>
                 <li class="points">
-                  Research new technologies and use them to develope new
+                  Research new technologies and use them to develop new
                   features.
                 </li>
                 <li class="points">
