--- a/resume.html
+++ b/resume.html
@@ -28,7 +28,7 @@
                 <i class="fas fa-map-signs"></i>
               </div>
               <div class="data">
-                4408 JFK Pkwy Apt D303<br /> Fort Collins, CO
+                Redmond, WA
               </div>
             </li>
             <li>
@@ -80,63 +80,15 @@
           <ul>
             <li>
               <div class="skill_name">
-                JavaScript
-              </div>
-              <div class="skill_progress">
-                <div id="circle" style="background-color: #0bb5f4;"></div>
-                <div id="circle" style="background-color: #0bb5f4;"></div>
-                <div id="circle" style="background-color: #0bb5f4;"></div>
-                <div id="circle" style="background-color: #0bb5f4;"></div>
-                <div id="circle"></div>
-              </div>
-            </li>
-            <li>
-              <div class="skill_name">
-                C#
-              </div>
-              <div class="skill_progress">
-                <div id="circle" style="background-color: #0bb5f4;"></div>
-                <div id="circle" style="background-color: #0bb5f4;"></div>
-                <div id="circle" style="background-color: #0bb5f4;"></div>
-                <div id="circle" style="background-color: #0bb5f4;"></div>
-                <div id="circle"></div>
-              </div>
-            </li>
-            <li>
-              <div class="skill_name">
-                .Net
-              </div>
-              <div class="skill_progress">
-                <div id="circle" style="background-color: #0bb5f4;"></div>
-                <div id="circle" style="background-color: #0bb5f4;"></div>
-                <div id="circle" style="background-color: #0bb5f4;"></div>
-                <div id="circle"></div>
-                <div id="circle"></div>
-              </div>
-            </li>
-            <li>
-              <div class="skill_name">
-                GraphQL
-              </div>
-              <div class="skill_progress">
-                <div id="circle" style="background-color: #0bb5f4;"></div>
-                <div id="circle" style="background-color: #0bb5f4;"></div>
-                <div id="circle" style="background-color: #0bb5f4;"></div>
-                <div id="circle" style="background-color: #0bb5f4;"></div>
-                <div id="circle"></div>
-              </div>
-            </li>
-            <li>
-              <div class="skill_name">
                 ReactJS
               </div>
-              <div class="skill_progress">
+              <!-- <div class="skill_progress">
                 <div id="circle" style="background-color: #0bb5f4;"></div>
                 <div id="circle" style="background-color: #0bb5f4;"></div>
                 <div id="circle" style="background-color: #0bb5f4;"></div>
                 <div id="circle" style="background-color: #0bb5f4;"></div>
                 <div id="circle"></div>
-              </div>
+              </div> -->
             </li>
 
             <!-- <li>
@@ -156,25 +108,73 @@
               <div class="skill_name">
                 Gatsby
               </div>
-              <div class="skill_progress">
-                <div id="circle" style="background-color: #0bb5f4;"></div>
-                <div id="circle" style="background-color: #0bb5f4;"></div>
-                <div id="circle" style="background-color: #0bb5f4;"></div>
-                <div id="circle" style="background-color: #0bb5f4;"></div>
-                <div id="circle" style="background-color: #0bb5f4;"></div>
-              </div>
-            </li>
-            <li>
-              <div class="skill_name">
-                Angular
-              </div>
-              <div class="skill_progress">
+              <!-- <div class="skill_progress">
                 <div id="circle" style="background-color: #0bb5f4;"></div>
                 <div id="circle" style="background-color: #0bb5f4;"></div>
                 <div id="circle" style="background-color: #0bb5f4;"></div>
                 <div id="circle" style="background-color: #0bb5f4;"></div>
                 <div id="circle"></div>
+              </div> -->
+            </li>
+            <li>
+              <div class="skill_name">
+                Angular
               </div>
+              <!-- <div class="skill_progress">
+                <div id="circle" style="background-color: #0bb5f4;"></div>
+                <div id="circle" style="background-color: #0bb5f4;"></div>
+                <div id="circle" style="background-color: #0bb5f4;"></div>
+                <div id="circle"></div>
+                <div id="circle"></div>
+              </div> -->
+            </li>
+            <li>
+              <div class="skill_name">
+                GraphQL
+              </div>
+              <!-- <div class="skill_progress">
+                <div id="circle" style="background-color: #0bb5f4;"></div>
+                <div id="circle" style="background-color: #0bb5f4;"></div>
+                <div id="circle" style="background-color: #0bb5f4;"></div>
+                <div id="circle" style="background-color: #0bb5f4;"></div>
+                <div id="circle"></div>
+              </div> -->
+            </li>
+            <li>
+              <div class="skill_name">
+                JavaScript
+              </div>
+              <!-- <div class="skill_progress">
+                <div id="circle" style="background-color: #0bb5f4;"></div>
+                <div id="circle" style="background-color: #0bb5f4;"></div>
+                <div id="circle" style="background-color: #0bb5f4;"></div>
+                <div id="circle" style="background-color: #0bb5f4;"></div>
+                <div id="circle"></div>
+              </div> -->
+            </li>
+            <li>
+              <div class="skill_name">
+                C#
+              </div>
+              <!-- <div class="skill_progress">
+                <div id="circle" style="background-color: #0bb5f4;"></div>
+                <div id="circle" style="background-color: #0bb5f4;"></div>
+                <div id="circle" style="background-color: #0bb5f4;"></div>
+                <div id="circle" style="background-color: #0bb5f4;"></div>
+                <div id="circle"></div> -->
+              <!-- </div> -->
+            </li>
+            <li>
+              <div class="skill_name">
+                .Net
+              </div>
+              <!-- <div class="skill_progress">
+                <div id="circle" style="background-color: #0bb5f4;"></div>
+                <div id="circle" style="background-color: #0bb5f4;"></div>
+                <div id="circle" style="background-color: #0bb5f4;"></div>
+                <div id="circle"></div>
+                <div id="circle"></div>
+              </div> -->
             </li>
             <!-- <li>
                             <div class="skill_name">
@@ -205,25 +205,25 @@
               <div class="skill_name">
                 HTML
               </div>
-              <div class="skill_progress">
+              <!-- <div class="skill_progress">
                 <div id="circle" style="background-color: #0bb5f4;"></div>
                 <div id="circle" style="background-color: #0bb5f4;"></div>
                 <div id="circle" style="background-color: #0bb5f4;"></div>
                 <div id="circle" style="background-color: #0bb5f4;"></div>
                 <div id="circle"></div>
-              </div>
+              </div> -->
             </li>
             <li>
               <div class="skill_name">
                 CSS
               </div>
-              <div class="skill_progress">
+              <!-- <div class="skill_progress">
                 <div id="circle" style="background-color: #0bb5f4;"></div>
                 <div id="circle" style="background-color: #0bb5f4;"></div>
                 <div id="circle" style="background-color: #0bb5f4;"></div>
                 <div id="circle"></div>
                 <div id="circle"></div>
-              </div>
+              </div> -->
             </li>
             <!-- <li>
                             <div class="skill_name">
@@ -325,13 +325,13 @@
               <div class="skill_name">
                 Linux
               </div>
-              <div class="skill_progress">
+              <!-- <div class="skill_progress">
                 <div id="circle" style="background-color: #0bb5f4;"></div>
                 <div id="circle" style="background-color: #0bb5f4;"></div>
                 <div id="circle" style="background-color: #0bb5f4;"></div>
                 <div id="circle" style="background-color: #0bb5f4;"></div>
                 <div id="circle"></div>
-              </div>
+              </div> -->
             </li>
           </ul>
         </div>
@@ -342,7 +342,7 @@
         <div class="title">
           <p class="bold">Bio</p>
         </div>
-        <p>Professional Software Engineer, Endurance cyclists, driven to make the world a better place.</p>
+        <p>Professional Software Engineer, non-professional endurance cyclist, driven to never stop learning.</p>
       </div>
       <div class="resume_item resume_work">
         <div class="title">
@@ -357,10 +357,11 @@
               <p class="semi-bold" style="font-size: 12px;">Key Responsibilities</p>
               <ul style="padding-left: 25px;">
                 <li class="points">
-                  Provide continued support for multiple client websites.
+                  Develop solutions that improves site usibility and reduces friction for the clients, users, and copy editors. 
                 </li>
+                <li class="points">Design features around components allowing for scalability and consistantcy.</li>
                 <li class="points">
-                  Archictect and build out new pages and features for client websites.
+                  Architect and build out new pages and features for client websites.
                 </li>
               </ul>
               <p class="semi-bold" style="font-size: 12px;">Key Achievement</p>
@@ -406,17 +407,20 @@
               <p class="semi-bold" style="font-size: 12px;">Key Responsibilities</p>
               <ul style="padding-left: 25px;">
                 <li class="points">
-                  Assist with application developement and maintenance using .Net and Angular
+                  Assist with application development and maintenance using .Net and Angular
                   frameworks writing in C# and Typescript.
                 </li>
                 <li class="points">
-                  Research new technologies and use them to develope new features.
+                  Research and develop new features focusing on ease of use of our application.
+                </li>
+                <li class="points">
+                  Thoroughly test applications before release to ensure a quality experience for our end user.
                 </li>
               </ul>
               <p class="semi-bold" style="font-size: 12px;">Key Achievement</p>
               <ul style="padding-left: 25px;">
                 <li class="points">
-                  Developed an auto document importer by leveraging Microsoft Azures Computer Vision
+                  Developed an auto document importer by leveraging Microsoft Azure's Computer Vision
                   API resulting in a quicker and easier document building solution for the user.
                 </li>
               </ul>
